test/DAG/argument-type-error-location.fab
#
# Type errors should show up at the point of usage, not necessarily definition:
#
# foo = 'hi';
# bar:file = foo;    # error highlight should be shown here, not the line above
#
# RUN: fab --format=null %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

join = function(x:string, y:string)
	if (x == '') y
	else if (y == '') x
	else x + ', ' + y
;

foo = 'Hello';
bar = 'world';
baz = file('a.c');

success = join(foo, bar) + '!';

# CHECK: error-locations.fab:24:16: error: type error:
failure = join(foo, baz);
